--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ baseurl: "http://lukashajdu.sk/"
 paginate: 20
 
 params:
-  sitename: "blog@lukas_hajdu:/sk"
+  sitename: "blog@lukash:/sk"
   dateform: "Monday, Jan 2, 2006"
 
 theme: "hugo-black-and-light-theme"
